--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "An HTML5 audio visualizer for mic/line-in input",
   "main": "index.js",
   "scripts": {
-    "build": "browserify index.js --standalone visualizer --outfile example/visualizer.browser.js",
-    "start": "serve example/"
+    "build": "browserify index.js --standalone visualizer -t [ babelify --presets [ es2015 ] ] --outfile visualizer.browser.js && npm run compress",
+    "build-dev": "browserify index.js --standalone visualizer --outfile visualizer.browser.js",
+    "compress": "uglifyjs -c dead_code,unused visualizer.browser.js > visualizer.browser.min.js",
+    "start-dev": "serve . & npm run watch",
+    "watch": "watchify index.js -v -o visualizer.browser.js --verbose --standalone visualizer"
   },
   "repository": {
     "type": "git",
@@ -14,11 +17,15 @@
   "author": "Ian Harmon",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^14.0.0"
+    "babel-preset-es2015": "^6.22.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.0.0",
+    "serve": "^3.3.0",
+    "uglify-js": "^2.7.5",
+    "watchify": "^3.9.0"
   },
   "dependencies": {
     "get-user-media-promise": "^1.1.1",
-    "raf": "^3.3.0",
-    "serve": "^3.3.0"
+    "raf": "^3.3.0"
   }
 }
