--- a/examples/browserify/package.json
+++ b/examples/browserify/package.json
@@ -7,7 +7,7 @@
     "build": "browserify index.js -t [ babelify --presets [ es2015 ] ] --outfile bundle.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
