--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "visualizer.js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "An HTML5 audio visualizer for mic/line-in input",
   "main": "index.js",
   "scripts": {
-    "build": "browserify index.js --standalone visualizer -t [ babelify --presets [ es2015 ] ] --outfile visualizer.browser.js && npm run compress",
+    "build": "browserify index.js --standalone visualizer --outfile visualizer.browser.js && npm run compress",
     "compress": "uglifyjs -c dead_code,unused visualizer.browser.js > visualizer.browser.min.js",
     "watch": "watchify index.js -v -o visualizer.browser.js --verbose --standalone visualizer"
   },
@@ -14,6 +14,9 @@
   },
   "author": "Ian Harmon",
   "license": "MIT",
+  "browserify": {
+    "transform": [["babelify", { "presets": ["es2015"] }]]
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
