--- a/package.json
+++ b/package.json
@@ -15,7 +15,16 @@
   "author": "Ian Harmon",
   "license": "MIT",
   "browserify": {
-    "transform": [["babelify", { "presets": ["es2015"] }]]
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
@@ -25,7 +34,9 @@
     "watchify": "^3.9.0"
   },
   "dependencies": {
+    "clamp": "^1.0.1",
     "get-user-media-promise": "^1.1.1",
+    "next-tick": "^1.0.0",
     "raf": "^3.3.0"
   }
 }
