--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify index.js --standalone visualizer --outfile visualizer.browser.js && npm run compress",
-    "compress": "uglifyjs -c dead_code,unused visualizer.browser.js > visualizer.browser.min.js",
+    "compress": "uglifyjs visualizer.browser.js --compress --mangle > visualizer.browser.min.js",
     "watch": "watchify index.js -v -o visualizer.browser.js --verbose --standalone visualizer"
   },
   "repository": {
@@ -14,23 +14,9 @@
   },
   "author": "Ian Harmon",
   "license": "MIT",
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
-  },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babelify": "^7.3.0",
     "browserify": "^14.0.0",
-    "uglify-js": "^2.7.5",
+    "uglify-es": "^3.0.3",
     "watchify": "^3.9.0"
   },
   "dependencies": {
